tolk-tester/tests/invalid-semantics/err-4143.tolk
type A<T = A<int>> = int

/**
@compilation_should_fail
@stderr type `A` circularly references itself
 */
